--- a/build.gradle
+++ b/build.gradle
@@ -28,21 +28,6 @@ plugins {
 }
 
 
-ext{
-    qaReportsDir = file("${buildDir}/test-results")
-
-    // TODO: Increase these, but needs to be set per subproject
-    limits = [
-        'instruction': 40.23,
-        'branch'     : 23.76,
-        'line'       : 40.9,
-        'complexity' : 37.5,
-        'method'     : 47.44,
-        'class'      : 67.86
-    ]    
-    
-    
-}
 
 
 
@@ -63,6 +48,7 @@ apply plugin: 'findbugs'
 apply plugin: 'checkstyle'
 apply plugin: 'pmd'
 apply plugin: 'jdepend'
+
 
 group = "au.com.mountain-pass"
 archivesBaseName = "hyperstate"
@@ -95,14 +81,26 @@ gradle.taskGraph.whenReady {taskGraph ->
     logger.lifecycle("${archivesBaseName} version: " + version)
 }
 
+ext{
+  qaReportsDir = file("${buildDir}/test-results")
+
+  // TODO: Increase these, but needs to be set per subproject
+  limits = [
+      'instruction': 40.23,
+      'branch'     : 23.76,
+      'line'       : 40.9,
+      'complexity' : 37.5,
+      'method'     : 47.44,
+      'class'      : 67.86
+  ]
+  
+  
+}
 
 
 compileJava.options.compilerArgs.add '-parameters'
 compileTestJava.options.compilerArgs.add '-parameters'
 
-dependencyManagement {
-    //imports { mavenBom 'org.springframework.cloud:spring-cloud-starter-parent:1.0.0.RELEASE' }
-}
 
 jar { baseName = 'hyperstate' }
 
@@ -519,8 +517,29 @@ tasks.getByName("githubRelease") {
     }
 }
 
-closeRepository.dependsOn githubRelease
+closeAndPromoteRepository.finalizedBy githubRelease
 
+
+
+project(":hyperstate-core"){
+    apply plugin: 'java'
+    dependencies {
+    }
+}
+
+project(":hyperstate-server"){
+    apply plugin: 'java'
+    dependencies {
+        compile project(":hyperstate-core")
+    }
+}
+
+project(":hyperstate-client"){
+    apply plugin: 'java'
+    dependencies {
+        compile project(":hyperstate-core")
+    }
+}
 
 gradle.taskGraph.afterTask { Task task, TaskState state ->
     if (state.failure) {
