#9 and #11 Moving code into client
Initial move. Still lots to be done

--- a/build.gradle
+++ b/build.gradle
@@ -553,6 +553,7 @@ project(":hyperstate-server"){
 
 
     compile project(":hyperstate-core")
+    testCompile project(":hyperstate-client")
     
     
   }
