--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,1 @@
-include "hyperstate-core", "hyperstate-server", "hyperstate-client"
+include "hyperstate-core", "hyperstate-server", "hyperstate-client", "hyperstate-client-webdriver"
