--- a/build.gradle
+++ b/build.gradle
@@ -544,6 +544,9 @@ project(":hyperstate-server"){
     testCompile 'org.springframework.boot:spring-boot-starter-test'
     testCompile "info.cukes:cucumber-java:1.2.4","info.cukes:cucumber-junit:1.2.4","info.cukes:cucumber-spring:1.2.4"
 
+    testCompile group: 'org.exparity', name: 'hamcrest-date', version: '2.0.4'
+    testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.1'
+    
     //compile('org.flywaydb:flyway-core')
     testCompile("com.h2database:h2:1.4.192")
 
