--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,6 @@
 // VersionEye project ID added by Gradle VersionEye plugin
 versioneye.projectid=57722af8143be6003a072886
 
+versioneye.organisation=mountain-pass
+versioneye.team=randd
+
