--- a/build.gradle
+++ b/build.gradle
@@ -21,16 +21,52 @@ plugins {
   id "co.riiid.gradle" version "0.4.2"
 }
 
-apply plugin: 'maven'
 apply plugin: 'io.codearte.nexus-staging'
 apply plugin: 'announce'
 
-group = "au.com.mountain-pass"
-archivesBaseName = "hyperstate"
 
+
+
+task wrapper(type: Wrapper) { gradleVersion = '3.0' }
+
+task (printNextVersion) << {
+  configurations.archives.allArtifacts.files.filter { !it.name.endsWith('asc') }.files.each { println it }
+}
+
+version = 'LOCAL'
+
+
+// bloody hell this seams way more complicated than it should be
+// basically I don't want to set the version manually, partly because
+// I'll forget to update it, partly because I'm lazy
+//
+// 1) I was not able to set the version in a task, because then
+// it was be undefined where I need it, so instead I set the version
+// once the taskGraph is ready.
+//
+// 2) The version is simply the last released verison plus 1. To get
+// the last released version we search the oss sonatype repo for the
+// lastest version of out project. If it doesn't find anything, then
+// this must be version 1. Otherwise we'll get back a redirect to
+// the lastest version and we can parse it's version out of that. Add
+// one and we are done.
+//
+// 3) We only want to do this if we are uploading artifacts or printing
+// the version, otherwise we'll need an internet connection every time
+// we do a build. That would suck, so we check what's in the task graph
+//
+// 4) If we are uploading a snapshot (still need to figure out why we
+// would do that) or printing the snapshot version, then we add
+// '-SNAPSHOT' to the version. 
+//
+// 5) It's not enough to set the version on the root project, we
+// need to iterate over the subprojects, setting the version
+// for them as well.
 gradle.taskGraph.whenReady {taskGraph ->
-  if (taskGraph.hasTask(uploadArchives)) {
-    URL url = new URL( "https://oss.sonatype.org/service/local/artifact/maven/redirect?g=${project.group}&a=${archivesBaseName}&v=LATEST&r=releases" )
+  def uploadTasks = taskGraph.getAllTasks().findAll { task -> task.name.startsWith('upload') || task.name.endsWith('printVersion') || task.name.endsWith('printSnapshotVersion') }
+  if(!uploadTasks.empty) {
+    URL url = new URL( "https://oss.sonatype.org/service/local/artifact/maven/redirect?g=${project.group}&a=${project.name}&v=LATEST&r=releases" )
+    logger.lifecycle("url: " + url)
     HttpURLConnection conn = url.openConnection();
     conn.setInstanceFollowRedirects(false);
     def code = conn.getResponseCode();
@@ -49,20 +85,23 @@ gradle.taskGraph.whenReady {taskGraph ->
   } else {
     version = 'LOCAL'
   }
-  if(taskGraph.hasTask(uploadSnapshotArchives)) {
+  def snapshotTasks = taskGraph.getAllTasks().findAll { task -> task.name.startsWith('uploadSnapshot') || task.name.endsWith('printSnapshotVersion') }
+  if(!snapshotTasks.empty) {
     version = version + "-SNAPSHOT"
   }
-  logger.lifecycle("${archivesBaseName} version: " + version)
+  
+  logger.lifecycle("${rootProject.name} version: " + rootProject.version)
+  subprojects.each {
+    it.version =  rootProject.version
+  }
 }
-
-task wrapper(type: Wrapper) { gradleVersion = '3.0' }
-
-
 
 allprojects {
   apply plugin: 'eclipse'
   apply plugin: 'idea'
+  apply plugin: 'maven'
 
+  group = "au.com.mountain-pass"
 
   ext{
     qaReportsDir = file("${buildDir}/test-results")
@@ -81,6 +120,9 @@ allprojects {
     providedRuntime
     codacy
   }
+
+  task printVersion << { println "${project.name} version: ${version}" }
+  task printSnapshotVersion << { println "${project.name} snapshot version: ${version}" }
 }
 
 subprojects {
@@ -360,8 +402,8 @@ subprojects {
   tasks.withType(Checkstyle) {
     reports {
       xml.enabled true
-      html.enabled true
-      html.stylesheet resources.text.fromFile("${rootProject.projectDir}/config/checkstyle/checkstyle.xsl")
+      //html.enabled true
+      //html.stylesheet resources.text.fromFile("${rootProject.projectDir}/config/checkstyle/checkstyle.xsl")
     }
   }
 
@@ -385,57 +427,75 @@ subprojects {
     sign jar, javadocJar, sourcesJar, qaReportsJar
   }
 
+  task (listArchives) << {
+    configurations.archives.allArtifacts.files.filter { !it.name.endsWith('asc') }.files.each { println it }
+  }
 
-}
+  github {
+    owner = 'mountain-pass'
+    repo = 'hyperstate'
+    token = project.hasProperty('githubToken') ? project.getProperty('githubToken') : 'NOTSET'
+    tagName = "${version}"
+    targetCommitish = 'master'
+    name = "v${version}"
+    body = """Release"""
+    assets = configurations.archives.allArtifacts.files.filter { !it.name.endsWith('asc') }.files
+    prerelease = true
+    draft = true
+  }
 
 
-task uploadSnapshotArchives() << { }
 
-uploadSnapshotArchives.finalizedBy uploadArchives
+  task uploadSnapshotArchives() << { }
 
-uploadArchives {
-  repositories {
-    mavenDeployer {
-      beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
+  uploadSnapshotArchives.finalizedBy uploadArchives
 
-      repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
-        authentication(userName: project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : '', password: project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : '')
-      }
+  uploadArchives {
+    repositories {
+      mavenDeployer {
+        beforeDeployment { MavenDeployment deployment -> signing.signPom(deployment) }
 
-      snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
-        authentication(userName: project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : '', password: project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : '')
-      }
+        repository(url: "https://oss.sonatype.org/service/local/staging/deploy/maven2") {
+          authentication(userName: project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : '', password: project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : '')
+        }
 
-      pom.project {
-        name 'Hyperstate'
-        packaging 'jar'
-        // optionally artifactId can be defined here
-        description 'A Hypermedia as the Engine of Application State (HATEOAS) library'
-        url 'https://github.com/mountain-pass/hyperstate'
+        snapshotRepository(url: "https://oss.sonatype.org/content/repositories/snapshots") {
+          authentication(userName: project.hasProperty('ossrhUsername') ? project.getProperty('ossrhUsername') : '', password: project.hasProperty('ossrhPassword') ? project.getProperty('ossrhPassword') : '')
+        }
 
-        scm {
-          connection 'scm:git:https://github.com/mountain-pass/hyperstate'
-          developerConnection 'scm:git:https://github.com/mountain-pass/hyperstate'
+        pom.project {
+          name 'Hyperstate'
+          packaging 'jar'
+          // optionally artifactId can be defined here
+          description 'A Hypermedia as the Engine of Application State (HATEOAS) library'
           url 'https://github.com/mountain-pass/hyperstate'
-        }
 
-        licenses {
-          license {
-            name 'The Apache License, Version 2.0'
-            url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+          scm {
+            connection 'scm:git:https://github.com/mountain-pass/hyperstate'
+            developerConnection 'scm:git:https://github.com/mountain-pass/hyperstate'
+            url 'https://github.com/mountain-pass/hyperstate'
           }
-        }
 
-        developers {
-          developer {
-            id 'tompahoward'
-            name 'Tom Howard'
-            email 'tom@windyroad.com.au'
+          licenses {
+            license {
+              name 'The Apache License, Version 2.0'
+              url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+            }
+          }
+
+          developers {
+            developer {
+              id 'tompahoward'
+              name 'Tom Howard'
+              email 'tom@windyroad.com.au'
+            }
           }
         }
       }
     }
   }
+
+
 }
 
 nexusStaging {
@@ -446,18 +506,6 @@ nexusStaging {
 }
 
 
-github {
-  owner = 'mountain-pass'
-  repo = 'hyperstate'
-  token = project.hasProperty('githubToken') ? project.getProperty('githubToken') : 'NOTSET'
-  tagName = "${version}"
-  targetCommitish = 'master'
-  name = "v${version}"
-  body = """Release"""
-  assets = configurations.archives.allArtifacts.files.filter { !it.name.endsWith('asc') }.files
-  prerelease = true
-  draft = true
-}
 
 tasks.getByName("githubRelease") {
   doFirst {
@@ -474,14 +522,14 @@ closeAndPromoteRepository.finalizedBy githubRelease
 
 //versioneye {
 //  includeSubProjects = true
-  // need to test the following option
-  //dependencies = transitive
+// need to test the following option
+//dependencies = transitive
 //}
 
 
 project(":hyperstate-core"){
   archivesBaseName = "hyperstate-core"
-  
+
   ext{
     // TODO: Increase these
     limits = [
@@ -494,7 +542,7 @@ project(":hyperstate-core"){
     ]
   }
 
-  
+
   dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     compile("org.springframework.boot:spring-boot-starter-hateoas")
@@ -504,7 +552,7 @@ project(":hyperstate-core"){
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
     compile("org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0")
     compile 'org.apache.commons:commons-lang3:3.4'
-    
+
   }
 
 }
@@ -513,8 +561,8 @@ project(":hyperstate-server"){
 
 
   archivesBaseName = "hyperstate-server"
-  
-   ext{
+
+  ext{
     // TODO: Increase these
     limits = [
       'instruction': 0,
@@ -526,7 +574,7 @@ project(":hyperstate-server"){
     ]
   }
 
-  
+
   dependencies {
 
     compile("org.springframework.boot:spring-boot-starter-web")
@@ -547,7 +595,7 @@ project(":hyperstate-server"){
     compile 'org.webjars.bower:angularjs:1.5.8' // when updating, don't forget to update index.html
 
     compile project(":hyperstate-core")
-    
+
     providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 
     testCompile 'org.springframework.boot:spring-boot-starter-test'
@@ -555,7 +603,7 @@ project(":hyperstate-server"){
 
     testCompile group: 'org.exparity', name: 'hamcrest-date', version: '2.0.4'
     testCompile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.8.1'
-    
+
     //compile('org.flywaydb:flyway-core')
     testCompile("com.h2database:h2:1.4.192")
 
@@ -564,10 +612,10 @@ project(":hyperstate-server"){
     testCompile project(":hyperstate-client-webdriver")
     testCompile project(":hyperstate-repository-memory")
     testCompile project(":hyperstate-cert")
-    
+
   }
-  
-  
+
+
 }
 
 project(":hyperstate-client"){
@@ -583,10 +631,7 @@ project(":hyperstate-client"){
       'class'      : 0
     ]
   }
-  dependencies { 
-    compile project(":hyperstate-core")    
-    
-  }
+  dependencies {  compile project(":hyperstate-core")     }
 }
 
 project(":hyperstate-client-webdriver"){
@@ -602,10 +647,10 @@ project(":hyperstate-client-webdriver"){
       'class'      : 0
     ]
   }
-  dependencies { 
+  dependencies {
     compile 'org.seleniumhq.selenium:selenium-java:2.53.1'
     compile project(":hyperstate-client")
-    
+
   }
 }
 
@@ -625,8 +670,8 @@ project(":hyperstate-repository-memory"){
   dependencies {
     compile("org.springframework.boot:spring-boot-starter")
     compile project(":hyperstate-core")
-    
-    
+
+
   }
 }
 
@@ -644,7 +689,7 @@ project(":hyperstate-cert"){
     ]
   }
   dependencies {
-    compile 'org.bouncycastle:bcpkix-jdk15on:1.54' 
+    compile 'org.bouncycastle:bcpkix-jdk15on:1.54'
     compile("org.springframework.boot:spring-boot-starter")
     compile("org.springframework.boot:spring-boot-starter-logging")
   }
