fixing project name
Adding the project name, because otherwise gradle assumes that the base
directory name is the project name. On our CI server, this meant that
the project name was “repo” instead of “hyperstate” and this interfered
with the release process.

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,3 @@
 include "hyperstate-core", "hyperstate-server", "hyperstate-cert", "hyperstate-client", "hyperstate-client-webdriver", "hyperstate-repository-memory"
+
+rootProject.name = "hyperstate"
